--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 tags
+report/main.aux
+report/main.fdb_latexmk
+report/main.fls
+report/main.log
+report/main.out
+report/main.synctex.gz
+report/main.toc
+report/main.bbl
+report/main.blg
